--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -18,5 +18,12 @@
   </form>
 </div>
 
-
 {% endblock %}
+{% block additionnal_script %}
+    function update_choice(obj) {
+      if (typeof prev != 'undefined') 
+        prev.parentNode.classList.remove('checked');
+      obj.parentNode.classList.add('checked');
+      prev = obj;
+    }
+{% endblock %}}
