--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -27,3 +27,11 @@
 </div>
 
 {% endblock %}
+{% block additionnal_script %}
+    function update_choice(obj) {
+      if (typeof prev != 'undefined') 
+        prev.parentNode.classList.remove('checked');
+      obj.parentNode.classList.add('checked');
+      prev = obj;
+    }
+{% endblock %}}
