--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -175,7 +175,7 @@
     function answer_flouze_request(answer) {
       socket.emit('answer_flouze_request', answer);
     }
-    {% block additionnal_script %}{% endblock %}}
+    {% block additionnal_script %}{% endblock %}
   </script>
 
   </body>
