--- a/website/templates/en_attente.jinja
+++ b/website/templates/en_attente.jinja
@@ -13,4 +13,4 @@
     socket.on('waiting_count', function(count) {
         document.getElementById('count').innerHTML = count;
     });
-{% endblock %}}
+{% endblock %}
