--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -33,5 +33,5 @@
         var player = frame.contentWindow.sozi.player;
         player.moveToFrame(frame_id % player.presentation.frames.length);
     });
-{% endblock %}}
+{% endblock %}
 
