--- a/website/templates/en_attente_jeu5.jinja
+++ b/website/templates/en_attente_jeu5.jinja
@@ -13,5 +13,5 @@
     socket.on('waiting_count', function(count) {
         document.getElementById('count').innerHTML = count;
     });
-{% endblock %}}
+{% endblock %}
 
