--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -17,7 +17,7 @@
     {% if prize == "star" %}
       <i class="fa fa-star" style="position:relative; top:2px;"></i>
     {% else %}
-      {{ prize }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin">
+      {{ prize }} <img src="/static/images/coin.png" class="coin" alt="Coin">
     {% endif %}
     </label>
   {% endfor %}
