--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -20,7 +20,7 @@
   {% endfor %}
 </div>
 <div class="w3-card w3-margin w3-padding-small" style="background-color:{{ game.master.color["primary"] }}">
-Il vous restera <span id="rest"></span> <img src="/static/images/coin.png" class="coin-small" alt="Coin"><br>
+Il vous restera <span id="rest"></span> <img src="/static/images/coin.png" class="coin" alt="Coin"><br>
 </div>
 <button type="submit" name="jeu5" value="proposition" class="w3-button w3-margin-bottom w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une proposition</button>
 </form>
