--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -18,7 +18,7 @@
         {% if prizes[player_it.choice] == "star" %}
         <div class="large w3-margin padding-reveal {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %}" style="background-color:{{ player_it.color["secondary"] }}; position:relative; bottom:4px"><i class="fa fa-star"></i></div>
         {% else %}
-        <div class="large w3-margin w3-text-white padding-reveal" style="background-color:{{ player_it.color["secondary"] }}; position:relative; bottom:4px">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin"></div>
+        <div class="large w3-margin w3-text-white padding-reveal" style="background-color:{{ player_it.color["secondary"] }}; position:relative; bottom:4px">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin" alt="Coin"></div>
         {% endif %}
         </div>
       </div>
