--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -38,7 +38,7 @@
         <label>Prénom</label></p>
         <input type="password" class="w3-input w3-margin-top" id="password" name="password">
         <label>Mot de passe</label></p>
-        <p class="w3-center"><button type="submit" class="w3-btn w3-blue-grey">Se connecter</button></p>
+        <p class="w3-center"><button type="submit" class="w3-btn w3-green">Se connecter</button></p>
       </form>
     </div>
   </body>
