--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -165,16 +165,16 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-red{border-color:#f44336}
 .w3-border-yellow{border-color:#ffeb3b}
 
-.bleu1{color:#000;background-color:#6d9eeb}
-.bleu2{color:#fff;background-color:#3c78d8}
-.rouge1{color:#000;background-color:#e06666}
-.rouge2{color:#fff;background-color:#cc0000}
-.jaune1{color:#000;background-color:#ffd966}
-.jaune2{color:#fff;background-color:#bf9000}
-.vert1{color:#000;background-color:#93c47d}
-.vert2{color:#fff;background-color:#6aa84f}
-.violet1{color:#000;background-color:#8e7cc3}
-.violet2{color:#fff;background-color:#674ea7}
+.bleu-light{color:#000;background-color:#6d9eeb}
+.bleu-dark{color:#fff;background-color:#3c78d8}
+.rouge-light{color:#000;background-color:#e06666}
+.rouge-dark{color:#fff;background-color:#cc0000}
+.jaune-light{color:#000;background-color:#ffd966}
+.jaune-dark{color:#fff;background-color:#bf9000}
+.vert-light{color:#000;background-color:#93c47d}
+.vert-dark{color:#fff;background-color:#6aa84f}
+.violet-light{color:#000;background-color:#8e7cc3}
+.violet-dark{color:#fff;background-color:#674ea7}
 
 .theme-dark-1{color:#fff;background-color:#b65612}
 .theme-light-1{color:#000;background-color:#dfaa84}
@@ -188,15 +188,15 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .theme-light-5{color:#000;background-color:#c470d4}
 
 /* Custom */
-.star-table{font-size:16px; width:115px; }
-.star-cell{padding:4px 8px}
+.star-table{float:left; height:100%;}
+.star-cell{padding:0.05em 0.3em; flex-grow:1;}
 
-.small{font-size:16px}
-.medium{font-size:20px}
-.large{font-size:25px}
-.huge{font-size:33px}
+.small{font-size:min(21px, 3vh)}
+.medium{font-size:min(28px, 4vh)}
+.large{font-size:min(35px, 5vh)}
+.huge{font-size:min(42px, 6vh)}
 
-.top-bar{height:50px}
+.top-bar{height:min(56px, 8vh); display: flex; flex-direction: row-reverse; justify-content: space-between;}
 
 @media (min-width:1000px){
   .star-table{font-size:20px;  width:170px}
@@ -222,7 +222,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   .anim{width:100%; height:100vw; border-radius:0}
 }
 
-.coin{width:1em; position:relative; top:0.1em}
+.coin{width:1em; position:relative; top:0.1em; margin:0 0.1em}
 
 .toast{position:absolute; bottom:5px; width:100%; margin:auto; display:flex; flex-direction: column; align-items:center; font-size:18px;}
 
@@ -281,6 +281,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .flex-horizontal {display:flex; flex-direction:row;}
 .flex-vertical {display:flex; flex-direction:column;}
+
+.space-between {justify-content:space-between;}
 
 .main-content-div {width: 100%; justify-content:space-evenly; align-items:center; flex-grow: 1}
 .body {min-height: 100vh; justify-content:flex-start;}
