--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -1,6 +1,6 @@
 {% set game = engine.current_game %}
-{% set config = game.config %}
 {% set page = engine.current_page %}
+{% set game_nb = engine.current_game_nb %}
 
 <!DOCTYPE html>
 <html>
@@ -17,40 +17,43 @@
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
-<body class="flex-vertical body" style="background-image: url({{ url_for("static", filename="images/" + config["background"]) }});">
+<body class="flex-vertical body" style="background-image: url({{ url_for("static", filename="images/" + game.config["background"]) }});">
 
-{% block player_money %}
-<!--Top bar with money-->
-<div onclick="document.getElementById('history').style.display='block'; scrollToBottom()" class="w3-container w3-text-white top-bar" style="background-color:{{ config["theme_colors"][0] }}">
-  <div class="w3-right huge"><span id="flouze">{{ player.flouze }}</span> <img src="{{ url_for('static', filename="images/coin.png") }}" class="coin" alt="Coin"></div>
+<div>
+  <!--Stars Table-->
+  {% block stars_table %}
+  <div class="flex-vertical star-table">
+    {% for player_it in engine.players %}
+      <div class="star-cell medium space-between flex-horizontal {{ player_it.color['name'] }}-light">
+        {{ player_it.name }}
+        <i id="player{{ loop.index0 }}_star" class="fa fa-star" style="padding: 0 0.3em"> {{ player_it.stars }}</i>
+      </div>
+    {% endfor %}
+  </div>
+  {% endblock %}
+
+  {% block player_money %}
+  <!--Top bar with money-->
+  <div onclick="document.getElementById('history').style.display='block'; scrollToBottom()" class="top-bar theme-dark-{{game_nb}}">
+    <span id="flouze" class="huge">{{ player.flouze }}</span> <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">
+    <!--Saved Flouze for game 3-->
+    {% if player.saved_flouze %}
+    <span class="large">({{ player.saved_flouze }} <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">)</span>
+    {% endif %}
+  </div>
+  {% endblock %}
+
+  <!--Donation button-->
+  {% block donation_button %}
+  <form method="GET" action="faire_un_don" class="w3-center" style="margin: 16px 0 0 115px;">
+  <button type="submit" class="w3-btn w3-round-large w3-green medium" style="border:2px solid #fff">Faire un don</button>
+  </form>
+  {% endblock %}
 </div>
-
-<!--Saved Flouze for game 3-->
-{% if player.saved_flouze %}
-<div class="w3-text-white w3-text-white large w3-round-large" style="text-align:right; padding:2px 16px; position:absolute; top:40px; right:0; background-color:{{ config["theme_colors"][0] }}">({{ player.saved_flouze }} <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">)</div>
-<div style="height:28px">*</div>
-{% endif %}
-{% endblock %}
-
-<!--Stars Table-->
-{% block stars_table %}
-<div class="w3-display-topleft star-table">
-  {% for player_it in engine.players %}
-    <div class="w3-border-0 star-cell" style="background-color:{{ player_it.color["primary"] }}">{{ player_it.name }}<i id="player{{ loop.index0 }}_star" class="fa fa-star w3-right" style="position:relative; top:4px;"> {{ player_it.stars }}</i></div>
-  {% endfor %}
-</div>
-{% endblock %}
-
-<!--Donation button-->
-{% block donation_button %}
-<form method="GET" action="faire_un_don" class="w3-center" style="margin: 16px 0 0 115px;">
-<button type="submit" class="w3-btn w3-round-large w3-green medium" style="border:2px solid #fff">Faire un don</button>
-</form>
-{% endblock %}
 
 <!--History-->
 <div id="history" onclick="document.getElementById('history').style.display='none'" class="w3-modal w3-animate-opacity">
-  <div id="history_list" class="w3-modal-content w3-padding w3-animate-top" style="background-color:{{ config["theme_colors"][1] }}">
+  <div id="history_list" class="w3-modal-content w3-padding w3-animate-top theme-light-{{game_nb}}">
     {% for time, _, _, msg in player.messages %}
     {{ time.strftime("%H:%M : ") + msg|replace("<br>", " ") }}<br>
     {% endfor %}
