--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -176,6 +176,12 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .violet-light{color:#000;background-color:#8e7cc3}
 .violet-dark{color:#fff;background-color:#674ea7}
 
+.border-bleu{border:4px solid #3c78d8}
+.border-rouge{border:4px solid #cc0000}
+.border-jaune{border:4px solid #bf9000}
+.border-vert{border:4px solid #6aa84f}
+.border-violet{border:4px solid #674ea7}
+
 .theme-dark-1{color:#fff;background-color:#b65612}
 .theme-light-1{color:#000;background-color:#dfaa84}
 .theme-dark-2{color:#fff;background-color:#017e68}
@@ -186,20 +192,20 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .theme-light-4{color:#000;background-color:#60a7c1}
 .theme-dark-5{color:#fff;background-color:#6b017f}
 .theme-light-5{color:#000;background-color:#c470d4}
+.border-theme-dark-5{border-color:#6b017f}
 
 /* Custom */
-.star-table{float:left; height:100%;}
-.star-cell{padding:0.05em 0.3em; flex-grow:1;}
+.star-table{float:left;}
+.star-cell{padding:0.05em 0.3em; flex-grow:1; align-items:center; gap:0.2em}
 
 .small{font-size:min(21px, 3vh)}
 .medium{font-size:min(28px, 4vh)}
 .large{font-size:min(35px, 5vh)}
 .huge{font-size:min(42px, 6vh)}
 
-.top-bar{height:min(56px, 8vh); display: flex; flex-direction: row-reverse; justify-content: space-between;}
+.top-bar{height:min(56px, 8vh); display: flex; flex-direction: row-reverse;}
 
 @media (min-width:1000px){
-  .star-table{font-size:20px;  width:170px}
   .star-cell{padding:8px 16px}
 
   .small{font-size:20px}
@@ -222,7 +228,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   .anim{width:100%; height:100vw; border-radius:0}
 }
 
-.coin{width:1em; position:relative; top:0.1em; margin:0 0.1em}
+.coin{width:0.8em; height: 0.8em; position:relative; top:0.1em; margin-right: 0.2em;}
 
 .toast{position:absolute; bottom:5px; width:100%; margin:auto; display:flex; flex-direction: column; align-items:center; font-size:18px;}
 
