--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn contrainte">
-<header class="large w3-padding" style="background-color:{{ config["theme_colors"][0] }}">
+<header class="large w3-padding theme-dark-4">
     Choisissez un prix
 </header>
 <form method="POST">
@@ -22,7 +22,7 @@
     </label>
   {% endfor %}
   </div>
-  <p><button name="jeu4" type="submit" class="w3-button" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
+  <p><button name="jeu4" type="submit" class="w3-button theme-dark-4">Valider</button></p>
 </form>
 </div>
 
