--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
-  <header class="w3-text-white w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
+  <header class="w3-text-white w3-padding large theme-dark-5">
       {{ player.message }}
   </header>
   <div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
@@ -27,7 +27,7 @@
   </div>
   <div class="w3-center">
       <form method="POST">
-        <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-margin w3-padding w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
+        <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-margin w3-padding w3-text-white theme-dark-5">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
