--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -34,11 +34,17 @@
 
   {% block player_money %}
   <!--Top bar with money-->
-  <div onclick="document.getElementById('history').style.display='block'; scrollToBottom()" class="top-bar theme-dark-{{game_nb}}">
-    <span id="flouze" class="huge">{{ player.flouze }}</span> <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">
+  <div onclick="document.getElementById('history').style.display='block'; scrollToBottom()" class="top-bar theme-dark-{{game_nb}} huge">
+    <span>
+      <span id="flouze">{{ player.flouze }}</span>
+      <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">
+    </span>
     <!--Saved Flouze for game 3-->
     {% if player.saved_flouze %}
-    <span class="large">({{ player.saved_flouze }} <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">)</span>
+    <span class="large">
+      ({{ player.saved_flouze }}
+      <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">)
+    </span>
     {% endif %}
   </div>
   {% endblock %}
