--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -6,14 +6,12 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-<div class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column;">
+<div class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column; justify-content:space-around">
 {% for color, owner in zip(game.colors, game.owner) %}
-<div style="flex-grow: 1; margin:2%;">
-    <button onclick="select_color({{color['id']}});" id={{color["name"]}} type="submit" name="couleurs" value={{ color["id"] }} class="w3-round-large" style="width:100%; height:100%; background-color:{{ color["primary"] }}; border:4px solid {{ color["secondary"] }}">
+<div style="height:19vh; margin:2%;">
+    <button onclick="select_color({{color['id']}});" id={{color["name"]}} type="submit" name="couleurs" value={{ color["id"] }} class="w3-round-large {{ color['name'] }}-light border-{{ color['name'] }}" style="width:100%; height:100%;">
     {% if owner %}
     {{ owner.name }}
-    {% else %}
-    <span style="color:{{ color["primary"] }}">*</span>
     {% endif %}
     </button>
 </div>
