--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -5,12 +5,12 @@
 {% block content%}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
-  <header class="w3-container large" style="background-color:{{ config["theme_colors"][0] }}">
+  <header class="w3-container large theme-dark-5">
       Shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-margin-right w3-button" style="width:120px; background-color:{{ config["theme_colors"][0] }}">OUI</button>
+    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-margin-right w3-button theme-dark-5" style="width:120px;">OUI</button>
     <button type="submit" name="don_etoiles" value="terminer" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
   </p>
   <p>
