--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -6,7 +6,7 @@
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
-  <header class="w3-container w3-padding large" style="background-color:{{ config["theme_colors"][0] }}; font-size:22px">
+  <header class="w3-container w3-padding large theme-dark-{{ game.game_nb }}" style="font-size:22px">
       Faire un don
   </header>
   <form class="w3-container" method="POST">
@@ -19,7 +19,7 @@
   <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
   <p>
     <button type="submit" formaction="/" class="w3-button w3-margin-right w3-red">en fait non</button>
-    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
+    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }}">Envoyer</button>
   </p>
   </form>
   </div>
