--- a/website/templates/final-results.jinja
+++ b/website/templates/final-results.jinja
@@ -9,5 +9,10 @@
 <div class="w3-panel w3-center w3-padding w3-round-large animate__animated animate__fadeIn theme-dark-5 border-theme-dark-5" style="max-width:90%; border-style:solid; border-width: 5px;">
 <p>{{ player.message }}</p>
 </div>
+<audio id="coins_sound" src="{{ url_for("static", filename="sounds/Coins-falling-on-floor.mp3") }}" style="display:none" preload="auto"> 
 
+{% endblock %}
+{% block additionnal_script %}
+  var coins_sound = document.getElementById("coins_sound");
+  coins_sound.play();
 {% endblock %}
