--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -199,11 +199,11 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .star-cell{padding:0.05em 0.3em; flex-grow:1; align-items:center; gap:0.2em}
 
 .small{font-size:min(21px, 3vh)}
-.medium{font-size:min(28px, 4vh)}
+.medium{font-size:min(25px, 3.5vh)}
 .large{font-size:min(35px, 5vh)}
 .huge{font-size:min(42px, 6vh)}
 
-.top-bar{height:min(56px, 8vh); display: flex; flex-direction: row-reverse;}
+.top-bar{height:min(63px, 9vh); display: flex; flex-direction: row-reverse;}
 
 @media (min-width:1000px){
   .star-cell{padding:8px 16px}
@@ -289,6 +289,11 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flex-vertical {display:flex; flex-direction:column;}
 
 .space-between {justify-content:space-between;}
+.center-items{align-items:center}
+
+.full-width{width:100%}
 
 .main-content-div {width: 100%; justify-content:space-evenly; align-items:center; flex-grow: 1}
 .body {min-height: 100vh; justify-content:flex-start;}
+
+.container-jeu-1{max-width:500px; width:90%; min-width:300px;}
