--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="w3-card-4 w3-center animate__animated animate__zoomIn theme-light-{{ game.game_nb }}">
-  <div class="w3-container w3-text-white theme-dark-{{ game.game_nb }}" style="margin:10px">
+  <div class="w3-container w3-text-white theme-dark-{{ game.game_nb }} large" style="margin:0.3em; padding:0.3em 0.9em">
     {{ config["title"] }}
   </div>
 </div>
