--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -61,8 +61,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-bar-block .w3-dropdown-hover .w3-button,.w3-bar-block .w3-dropdown-click .w3-button{width:100%;text-align:left;padding:8px 16px}
 .w3-main,#main{transition:margin-left .4s}
 .w3-modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
-.modal{z-index:3;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
-.w3-modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:90%;max-width: 600px}
+.w3-modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:90%;max-width:600px}
 .w3-bar{width:100%;overflow:hidden}.w3-center .w3-bar{display:inline-block;width:auto}
 .w3-bar .w3-bar-item{padding:8px 16px;float:left;width:auto;border:none;display:block;outline:0}
 .w3-bar .w3-dropdown-hover,.w3-bar .w3-dropdown-click{position:static;float:left}
@@ -260,10 +259,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .card-size {width:150px; height:120px;}
 @media (max-width:350px){.card-size {width:140px; height:110px;}}
-
 .padding-reveal {padding:8px}
 @media (max-width:350px){.padding-reveal {padding:4px}}
-
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -272,8 +269,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-
-
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
@@ -281,10 +276,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+.flip-card-back {transform: rotateY(180deg);}
 
-.flip-card-back {
-  transform: rotateY(180deg);
-}
+#history.hidden {visibility: hidden; opacity:0;}
+#history {z-index:3;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.3s;}
+
+#history_list.hidden {transform: translateY(-100vh);}
+#history_list {position:relative;transition: all 0.8s;}
 
 .flex-horizontal {display:flex; flex-direction:row;}
 .flex-vertical {display:flex; flex-direction:column;}
