--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -279,10 +279,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flip-card-back {transform: rotateY(180deg);}
 
 #history.hidden {visibility: hidden; opacity:0;}
-#history {z-index:3;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.3s;}
+#history {z-index:3;padding-bottom:15vh;position:fixed;bottom:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.3s;}
 
 #history_list.hidden {transform: translateY(-100vh);}
-#history_list {position:relative;transition: all 0.8s;}
+#history_list {margin:auto;position:relative;width:90%;max-width:600px; transition: all 0.8s;}
 
 .flex-horizontal {display:flex; flex-direction:row;}
 .flex-vertical {display:flex; flex-direction:column;}
