--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -34,7 +34,7 @@
 
   {% block player_money %}
   <!--Top bar with money-->
-  <div onclick="document.getElementById('history').classList.remove('hidden'); var history_list = document.getElementById('history_list'); history_list.classList.remove('hidden'); history_list.scrollTop = history_list.scrollHeight;" class="top-bar theme-dark-{{game_nb}} huge">
+  <div onclick="var history = document.getElementById('history'); history.classList.remove('hidden'); var history_list = document.getElementById('history_list').classList.remove('hidden'); history.scrollTop = history.scrollHeight;" class="top-bar theme-dark-{{game_nb}} huge">
     <span>
       <span id="flouze">{{ player.flouze }}</span>
       <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">
@@ -59,10 +59,11 @@
 
 <!--History-->
 <div id="history" onclick="document.getElementById('history_list').classList.add('hidden'); document.getElementById('history').classList.add('hidden');" class="hidden">
-  <div id="history_list" class="w3-modal-content w3-padding hidden theme-light-{{game_nb}}">
+  <div id="history_list" class="w3-padding hidden theme-light-{{game_nb}}">
     {% for time, _, _, msg in player.messages %}
     {{ time.strftime("%H:%M : ") + msg|replace("<br>", " ") }}<br>
     {% endfor %}
+    {{"Loooooooooooonguuuuue phrrrrraaaaaaaaaaseee <br/>"*100}}
   </div>
 </div>
 
